<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>l3xz_teleop</name>
  <version>1.0.0</version>
  <description>Teleoperation for L3X-Z via PS3 joystick and ROS topics.</description>

  <maintainer email="consulting@lxrobotics.com">Alexander Entinger</maintainer>

  <license>MIT</license>

  <author email="consulting@lxrobotics.com">Alexander Entinger</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>rosidl_default_generators</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
